Домашняя работа 2.14 (mockito)